tests/errors/error_negate_string.nimmy
# Error: Cannot negate a string
let x = -"hello"